--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,5 @@
 spring.application.name=user-service
 spring.config.import=optional:configserver:http://config-server:8888
+spring.cloud.config.fail-fast=true
 management.endpoints.web.exposure.include=*
 #logging.file.name=/opt/apps/userservice/user-service.log
